--- a/shairport-sync.conf
+++ b/shairport-sync.conf
@@ -2,3 +2,9 @@ general =
 {
 	playback_mode = "mono";
 };
+
+sessioncontrol =
+{
+	run_this_before_entering_active_state = "/usr/local/bin/switch_power on";
+	run_this_after_exiting_active_state = "/usr/local/bin/switch_power off";
+}
