--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 services:
   service:
     image: mikebrady/shairport-sync
+    security_opt:
+      - label=disable  # arggggg, needed for secret to work, why????
     # https://github.com/containers/podman/issues/20418
     # https://github.com/containers/podman/pull/20962
     # restart: unless-stopped
@@ -10,5 +12,11 @@ services:
     volumes:
       # https://docs.docker.com/engine/storage/bind-mounts/#configure-the-selinux-label
       - ./shairport-sync.conf:/etc/shairport-sync.conf:Z
+      - ./switch_power:/usr/local/bin/switch_power:Z
     devices:
       - /dev/snd
+    secrets:
+      - ha_access_token
+secrets:
+  ha_access_token:
+    file: ./ha_access_token
